2007-08-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion.spec.in:
	Add flumotion-nagios to spec.

2007-08-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* scripts/check-sync-on-feeds (videoEventProbe, audioEventProbe,
	  sendNewsegments, videoBufferProbe, audioBufferProbe):
	Improve the debug logging.

2007-08-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* scripts/check-sync-on-feeds:
	Script that probably could do with a bit of refactoring, to
	play back video and audio given video feeder and audio feeder
	details.
	Useful for checking sync at different points in a Flumotion
	flow.

2007-08-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/Makefile.am:
	* bin/flumotion-nagios.in:
	* configure.ac:
	* flumotion/Makefile.am:
	* flumotion/monitor/Makefile.am:
	* flumotion/monitor/__init__.py:
	* flumotion/monitor/nagios/Makefile.am:
	* flumotion/monitor/nagios/__init__.py:
	* flumotion/monitor/nagios/main.py (Mood, Mood.addOptions,
	  Mood.handleOptions, Mood.do, Mood._callback, Mood.gotMoodCb, Nagios,
	  Nagios.addOptions, Nagios.handleOptions, Nagios.parse, Nagios.cb,
	  Nagios.eb, Nagios.run, Nagios.connect, Nagios._connectedCb,
	  Nagios._connectedEb, main):
	* flumotion/monitor/nagios/util.py (LogCommand, LogCommand.__init__,
	  findComponent, ok, warning, critical):
	  Add a first stab at a flumotion-nagios binary, and an implementation
	  of the mood check.

2007-08-21  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/bouncers/Makefile.am: Autotoolage.

	* flumotion/component/bouncers/plug.py: New file, copied from
	bouncer.py, refactors bouncer functionality into a plug. The code
	for dealing with the uistate was removed, for better or for worse.

	* flumotion/component/bouncers/bouncer.xml: New file, declares the
	bouncer component, the bouncer plug bundles, and an implementation
	for the trivial bouncer. As yet untested.

	* flumotion/component/bouncers/component.py: New file, breaks out