@@ -1,3 +1,8 @@
+2007-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/wizard/save.py (Component.toXML):
+	  Consistently use 2-space indent in config xml.
+
 2007-08-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion.spec.in:
